monitoring/istio/vs-alertmanager.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /alertmanager/
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 9093
        host: alertmanager-main.monitoring.svc.cluster.local
