monitoring/istio/vs-grafana.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /grafana/
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 3000
        host: grafana.monitoring.svc.cluster.local
